--- a/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-1-nodejs-um-motor-javascript/package.json
+++ b/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-1-nodejs-um-motor-javascript/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "my-script",
+  "name": "dia-1-nodejs-um-motor-javascript",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "imc": "node imc.js",
+    "velocidade": "node velocidade.js",
+    "sorteio": "node sorteio.js",
+    "fatorial": "node fatorial.js",
+    "fibonacci": "node fibonacci.js",
     "start": "node index.js"
   },
   "author": "Raphael Lyra Perazzo",
